:new: add first version

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+**/.terragrunt-cache/*
+**/.terraform/*
+
+*.tfstate
+*.tfstate.*
+
+crash.log
+
+*.tfvars
+
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+.terraformrc
+terraform.rc
+
+**/.terraform.lock.hcl
+
+*.tgz
+
 /node_modules
 
 /dist
