--- a/package.json
+++ b/package.json
@@ -2,27 +2,38 @@
   "name": "codermarcos",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "bundle": "./dist",
   "scripts": {
+    "lint": "pug-lint \"./src/index.pug\"",
+    "deploy": "ts-node ./deploy.ts --print",
+    "remove": "ts-node ./remove.ts --print",
     "build": "cross-env NODE_ENV=production webpack",
     "start": "cross-env NODE_ENV=development webpack serve",
     "watch": "nodemon -e ts --watch webpack.config.ts --ignore src/ --exec \"npm run start\""
   },
-  "author": "",
-  "license": "ISC",
+  "author": {
+    "email": "coder.marcos@gmail.com",
+    "name": "codermarcos"
+  },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/node": "^14.14.31",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
+    "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
+    "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
+    "puglint-webpack-plugin": "^1.0.3",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2",
@@ -33,6 +44,7 @@
   },
   "dependencies": {
     "csx": "^10.0.2",
+    "eslint": "^7.32.0",
     "typestyle": "^2.1.0"
   }
 }
