--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "bundle": "./dist",
   "scripts": {
     "lint": "pug-lint \"./src/index.pug\"",
-    "deploy": "ts-node ./deploy.ts --print",
-    "remove": "ts-node ./remove.ts --print",
     "build": "cross-env NODE_ENV=production webpack",
     "start": "cross-env NODE_ENV=development webpack serve",
     "watch": "nodemon -e ts --watch webpack.config.ts --ignore src/ --exec \"npm run start\""
@@ -16,31 +14,32 @@
     "name": "codermarcos"
   },
   "devDependencies": {
-    "@types/copy-webpack-plugin": "^6.4.0",
-    "@types/html-webpack-plugin": "^3.2.4",
+    "@types/copy-webpack-plugin": "^10.1.0",
+    "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^14.14.31",
-    "@types/webpack": "^4.41.26",
-    "@types/webpack-dev-server": "^3.11.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
+    "@types/webpack-watch-files-plugin": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "eslint-loader": "^4.0.2",
-    "eslint-webpack-plugin": "^3.0.1",
-    "html-webpack-plugin": "^5.3.2",
+    "eslint-webpack-plugin": "^3.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
     "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "puglint-webpack-plugin": "^1.0.3",
-    "ts-loader": "^8.0.17",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.2",
-    "webpack": "^5.24.1",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-watch-files-plugin": "^1.1.0"
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-watch-files-plugin": "^1.2.1"
   },
   "dependencies": {
     "csx": "^10.0.2",
