--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,18 @@
   "compilerOptions": {
     "target": "es5",
     "module": "CommonJS",
-    "outDir": "./dist",      
-
-    "jsx": "react-jsx",
-    "strict": true, 
-    "noImplicitAny": true,        
+    "outDir": "./dist",
+    "strict": true,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true, 
-    "esModuleInterop": true,                      
-    "skipLibCheck": true,   
-    "resolveJsonModule": true, 
-    "forceConsistentCasingInFileNames": true
-  }
+    "noImplicitReturns": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node", "webpack", "webpack-dev-server"]
+  },
 }
+
+
