--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,11 +1,23 @@
 {
   "author": "codermarcos",
   "short_name": "codermarcos",
-  "name": "CV: Marcos Gonçalves | codermarcos",
+  "name": "Marcos Gonçalves De Carvalho | codermarcos",
   "start_url": "/?source=pwa",
   "background_color": "#3367D6",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#3367D6",  
-  "description": "Sou Marcos Gonçalves ou codermarcos um software engenieer especialista em frontend, aqui tem pouco da minhas experiencias profissionais."
+  "icons": [
+    {
+      "src": "/favicon/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#3367D6",
+  "description": "Marcos Gonçalves ou codermarcos é um engenheiro software especialista em frontend com forte experiência em devops e backend, aqui tem pouco de sua carreira."
 }
