:new: add css inline On branch main Changes to be committed: 	modified:   .editorconfig 	modified:   .gitignore 	modified:   README.md 	new file:   extract-css.ts 	modified:   iac/.terraform.lock.hcl 	modified:   iac/main.tf 	modified:   iac/terragrunt.hcl 	modified:   package-lock.json 	modified:   package.json 	modified:   src/i18n/pt.ts 	modified:   src/index.pug 	deleted:    src/json-ld.pug 	new file:   src/json-ld.ts 	modified:   src/static/sitemap.xml 	modified:   tsconfig.json 	modified:   webpack.config.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "CommonJS",
-    "outDir": "./dist",
+    "outDir": "./distOut",
     "strict": true,
     "noImplicitAny": false,
     "noUnusedLocals": true,
