--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "puglint-webpack-plugin": "^1.0.3",
+    "puppeteer": "^18.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
