:new: translate my cv to english On branch main Changes to be committed: 	modified:   .pug-lintrc.json 	modified:   extract-css.ts 	new file:   src/i18n/en-projects.ts 	new file:   src/i18n/en-tags.ts 	new file:   src/i18n/en.ts 	modified:   src/i18n/index.ts 	modified:   src/i18n/pt-projects.ts 	modified:   src/i18n/pt-tags.ts 	modified:   src/i18n/pt.ts 	new file:   src/images/icons/phone.pug 	modified:   src/index.ts 	modified:   src/style.ts 	modified:   webpack.config.ts

--- a/.pug-lintrc.json
+++ b/.pug-lintrc.json
@@ -2,7 +2,7 @@
   "disallowAttributeConcatenation": true,
   "requireSpaceAfterCodeOperator": true,
   "disallowDuplicateAttributes": true,
-  "validateAttributeQuoteMarks": true,
+  "validateAttributeQuoteMarks": "'",
   "requireLowerCaseAttributes": true,
   "validateTemplateString": true,
   "validateAttributeSeparator": {
