--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+
+[.github/workflows/*.{yaml, yml}]
+indent_style = space
+
 [*.{jsx,js,tsx,ts}]
 quote_type = single
