--- a/src/static/manifest.pt.json
+++ b/src/static/manifest.pt.json
@@ -3,7 +3,7 @@
   "short_name": "codermarcos",
   "name": "Marcos Gonçalves De Carvalho | codermarcos",
   "start_url": "/?source=pwa",
-  "background_color": "#3367D6",
+  "background_color": "#666666",
   "display": "standalone",
   "scope": "/",
   "icons": [
@@ -18,6 +18,6 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#3367D6",
-  "description": "Marcos Gonçalves ou codermarcos é um engenheiro software especialista em frontend com forte experiência em devops e backend, aqui tem pouco de sua carreira."
+  "theme_color": "#666666",
+  "description": "Marcos Gonçalves ou codermarcos é um engenheiro software que ama desafios e resolver problemas, aqui tem pouco de sua carreira."
 }
