:abc: fix typo error On branch main Changes to be committed: 	modified:   .github/workflows/on_push_main.yaml

--- a/.github/workflows/on_push_main.yaml
+++ b/.github/workflows/on_push_main.yaml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   default:
-    name: Build and deploy0
+    name: Build and deploy
     runs-on: ubuntu-latest
     timeout-minutes: 30
     environment:
