--- a/.github/workflows/on_push_main.yaml
+++ b/.github/workflows/on_push_main.yaml
@@ -20,9 +20,11 @@ jobs:
     name: Build and deploy
     runs-on: ubuntu-latest
     timeout-minutes: 30
+
     environment:
       name: production
       url: https://mr.codermarcos.zone/
+
     steps:
       - uses: actions/checkout@v3
 
@@ -43,7 +45,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Build
-        run: npm build
+        run: npm run build
 
       - name: Init deploy
         uses: the-commons-project/terragrunt-github-actions@master
