--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codermarcos",
   "version": "1.0.0",
-  "description": "",
+  "description": "My personal website",
   "bundle": "./dist",
   "scripts": {
     "lint": "pug-lint \"./src/index.pug\"",
@@ -25,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
@@ -36,7 +36,6 @@
     "pug-loader": "^2.4.0",
     "puglint-webpack-plugin": "^1.0.3",
     "puppeteer": "^18.0.5",
-    "rimraf": "^5.0.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
@@ -46,8 +45,9 @@
     "webpack-watch-files-plugin": "^1.2.1"
   },
   "dependencies": {
+    "rimraf": "^5.0.0",
+    "cross-env": "^7.0.3",
     "csx": "^10.0.2",
-    "eslint": "^7.32.0",
     "typestyle": "^2.1.0"
   }
 }
