--- a/package.json
+++ b/package.json
@@ -1,21 +1,10 @@
 {
-  "name": "codermarcos",
-  "version": "1.0.0",
-  "description": "My personal website",
-  "bundle": "./dist",
-  "scripts": {
-    "lint": "pug-lint \"./src/index.pug\"",
-    "prebuild": "rimraf ./dist",
-    "build": "cross-env NODE_ENV=production webpack",
-    "postbuild": "ts-node ./extract-css.ts",
-    "start": "cross-env NODE_ENV=development webpack serve",
-    "watch": "nodemon -e ts --watch webpack.config.ts --ignore src/ --exec \"npm run start\""
-  },
   "author": {
     "email": "coder.marcos@gmail.com",
     "name": "codermarcos"
   },
-  "devDependencies": {
+  "bundle": "./dist",
+  "dependencies": {
     "@types/copy-webpack-plugin": "^10.1.0",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^14.14.31",
@@ -25,29 +14,37 @@
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "csx": "^10.0.2",
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "imagemin-webp-webpack-plugin": "^3.3.6",
-    "nodemon": "^2.0.7",
-    "pug": "^2.0.2",
+    "pug": "^2.0.4",
     "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "puglint-webpack-plugin": "^1.0.3",
     "puppeteer": "^18.0.5",
+    "rimraf": "^5.0.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
+    "typestyle": "^2.1.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
     "webpack-watch-files-plugin": "^1.2.1"
   },
-  "dependencies": {
-    "rimraf": "^5.0.0",
-    "cross-env": "^7.0.3",
-    "csx": "^10.0.2",
-    "typestyle": "^2.1.0"
-  }
+  "description": "My personal website",
+  "name": "codermarcos",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack",
+    "lint": "pug-lint \"./src/index.pug\"",
+    "postbuild": "ts-node ./extract-css.ts",
+    "prebuild": "rimraf ./dist",
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "watch": "nodemon -e ts --watch webpack.config.ts --ignore src/ --exec \"npm run start\""
+  },
+  "version": "1.0.0"
 }
