🐛 fix some translate problems On branch main Changes to be committed: 	modified:   .github/workflows/on_push_main.yaml 	modified:   src/i18n/en.ts 	modified:   src/i18n/pt.ts 	modified:   src/index.pug 	modified:   src/json-ld.ts

--- a/.github/workflows/on_push_main.yaml
+++ b/.github/workflows/on_push_main.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           terraform_version: "1.8.0"
 
-      - name: Init terraform
+      - name: Deploy
         working-directory: ./iac
         run: |
           terraform init
