--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-  "author": {
-    "email": "coder.marcos@gmail.com",
-    "name": "codermarcos"
-  },
-  "bundle": "./dist",
-  "dependencies": {
-    "@types/copy-webpack-plugin": "^10.1.0",
-    "@types/html-webpack-plugin": "^3.2.9",
-    "@types/node": "^20.12.7",
-    "@types/webpack": "^5.28.5",
-    "@types/webpack-dev-server": "^4.7.2",
-    "@types/webpack-watch-files-plugin": "^1.1.3",
-    "copy-webpack-plugin": "^12.0.2",
-    "cross-env": "^7.0.3",
-    "csx": "^10.0.2",
-    "html-webpack-plugin": "^5.6.0",
-    "imagemin-webp-webpack-plugin": "^3.3.6",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "puppeteer": "^22.6.4",
-    "rimraf": "^5.0.0",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "typestyle": "^2.1.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-watch-files-plugin": "^1.2.1"
-  },
-  "description": "My personal website",
-  "name": "cv-codermarcos-zone",
-  "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "postbuild": "ts-node ./extract-css.ts",
-    "prebuild": "rimraf ./dist",
-    "start": "cross-env NODE_ENV=development webpack serve",
-    "watch": "nodemon -e ts --watch webpack.config.ts --ignore src/ --exec \"npm run start\""
-  },
-  "version": "0.0.0",
+	"author": {
+		"email": "coder.marcos@gmail.com",
+		"name": "codermarcos"
+	},
+	"bundle": "./dist",
+	"dependencies": {
+		"copy-webpack-plugin": "^12.0.2",
+		"cross-env": "^7.0.3",
+		"csx": "^10.0.2",
+		"html-webpack-plugin": "^5.6.0",
+		"imagemin-webp-webpack-plugin": "^3.3.6",
+		"pug": "^2.0.4",
+		"pug-loader": "^2.4.0",
+		"puppeteer": "^22.6.4",
+		"ts-loader": "^9.5.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.5",
+		"typestyle": "^2.1.0",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4",
+		"webpack-watch-files-plugin": "^1.2.1"
+	},
+	"description": "My personal website",
+	"name": "cv-codermarcos-zone",
+	"scripts": {
+		"build": "cross-env NODE_ENV=production webpack",
+		"postbuild": "ts-node ./extract-css.ts",
+		"prebuild": "rimraf ./dist",
+		"start": "cross-env NODE_ENV=development webpack serve",
+		"watch": "nodemon -e ts --watch webpack.config.ts --ignore src/ --exec \"npm run start\""
+	},
+	"version": "0.0.0",
 	"engines": {
-		"node": ">=21"
+		"node": ">=18"
+	},
+	"devDependencies": {
+		"@types/copy-webpack-plugin": "^10.1.0",
+		"@types/html-webpack-plugin": "^3.2.9",
+		"@types/node": "^20.12.7",
+		"@types/webpack": "^5.28.5",
+		"@types/webpack-dev-server": "^4.7.2",
+		"@types/webpack-watch-files-plugin": "^1.1.3",
+		"rimraf": "^5.0.0"
 	}
 }
