--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
 	},
 	"bundle": "./dist",
 	"dependencies": {
-		"copy-webpack-plugin": "^12.0.2",
-		"cross-env": "^7.0.3",
 		"csx": "^10.0.2",
-		"html-webpack-plugin": "^5.6.0",
+		"copy-webpack-plugin": "^13.0.1",
+		"cross-env": "^10.0.0",
+		"html-webpack-plugin": "^5.6.4",
 		"imagemin-webp-webpack-plugin": "^3.3.6",
 		"pug": "^2.0.4",
 		"pug-loader": "^2.4.0",
-		"puppeteer": "^22.6.4",
-		"ts-loader": "^9.5.1",
+		"puppeteer": "^24.20.0",
+		"rimraf": "^6.0.1",
+		"ts-loader": "^9.5.4",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5",
+		"typescript": "^5.9.2",
 		"typestyle": "^2.1.0",
-		"webpack": "^5.91.0",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4",
+		"webpack": "^5.101.3",
+		"webpack-cli": "^6.0.1",
+		"webpack-dev-server": "^5.2.2",
 		"webpack-watch-files-plugin": "^1.2.1"
 	},
 	"description": "My personal website",
@@ -33,15 +34,14 @@
 	},
 	"version": "0.0.0",
 	"engines": {
-		"node": ">=18"
+		"node": ">=24.5"
 	},
 	"devDependencies": {
-		"@types/copy-webpack-plugin": "^10.1.0",
+		"@types/copy-webpack-plugin": "^10.1.3",
 		"@types/html-webpack-plugin": "^3.2.9",
-		"@types/node": "^20.12.7",
+		"@types/node": "^24.4.0",
 		"@types/webpack": "^5.28.5",
 		"@types/webpack-dev-server": "^4.7.2",
-		"@types/webpack-watch-files-plugin": "^1.1.3",
-		"rimraf": "^5.0.0"
+		"@types/webpack-watch-files-plugin": "^1.1.3"
 	}
 }
